--- a/src/styles/LandingPage.module.css
+++ b/src/styles/LandingPage.module.css
@@ -82,7 +82,7 @@
     .container {
         display: flex;
         flex-direction: column;
-        height: 100%;
+        height: max(100%, 100dvh);
     }
 
     .content {
